# SatuMorpher

./: .gitignore  CMakeLists.txt  NOTICE  README.md
.github/workflows/: build.yml
src/: LampChoice.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h
